# mc_rtc

./: .clang-format-common.sh  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: build-others.yml  build.yml  conan.yml  package.yml
CMakeModules/: CMakeLists.txt  MakeVersionHeader.cmake
benchmarks/: benchAllocTasks.in.cpp  benchCompletionCriteria.cpp  benchRobotLoading.in.cpp  benchSimulationContactSensor.in.cpp
binding/python/: CMakeLists.txt
conan/test_package/: conanfile.py  example.cpp  test.py
debian/: changelog  control  libmc-rtc-dev.install  libmc-rtc2.install  rules
doc/: _config.yml  robots.html
include/mc_control/: MCController.h  SimulationContactPair.h  generic_gripper.h  mc_controller.h  mc_global_controller.h  mc_python_controller.h
include/mc_rbdyn/: CoM.h  Collision.h  CollisionPair.h  Contact.h  Convex.h  CylindricalSurface.h  Device.h  ForceSensor.h  Frame.h  FreeFrame.h  Limits.h  (+17 more)
plugins/: .gitignore
src/: CMakeLists.txt
tests/: CMakeLists.txt  MetaTaskTraits.cpp  dummyServer.cpp  testCompletionCriteria.cpp  testConstraintSetLoader.cpp  testDataStore.cpp  testJsonIO.cpp  testMetaTaskLoader.cpp  testSchemaExamples.in.cpp  testSimulationContactPair.cpp  test_controller_ticker.cpp  test_mc_rbdyn.cpp  utils.h
tests/functions/: CMakeLists.txt  FrameErrorFunction.cpp
utils/: build_and_install.sh  config_build_and_install.bionic.sh  config_build_and_install.macos.sh  config_build_and_install.windows.sh  config_build_and_install.xenial.sh  mc_rtc_new_controller.in.py  mc_rtc_new_fsm_controller.in.py
(+245 files in other folders)
