MACRO(function_test NAME)
  if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${NAME}.cpp)
    add_executable(${NAME} ${NAME}.cpp)
  else()
    message(FATAL_ERROR "Cannot add function_test:${NAME}.cpp does not exist in ${CMAKE_CURRENT_SOURCE_DIR}")
  endif()
  target_link_libraries(${NAME} PUBLIC mc_rbdyn mc_tvm Boost::unit_test_framework Boost::disable_autolinking ${ARGN})
  target_compile_definitions(${NAME} PRIVATE -DBOOST_TEST_DYN_LINK -DBOOST_TEST_MAIN)
  target_include_directories(${NAME} PRIVATE ${CONFIG_HEADER_INCLUDE_DIR})
  target_include_directories(${NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
  set_target_properties(${NAME} PROPERTIES FOLDER tests/functions)
  add_test(${NAME} ${NAME})
  # Adding a project configuration file (for MSVC only)
  generate_msvc_dot_user_file(${NAME})
ENDMACRO()

function_test(FrameErrorFunction)